DC-2375: dark mode style bug

--- a/app/internal_packages/ui-dark/styles/override-email.less
+++ b/app/internal_packages/ui-dark/styles/override-email.less
@@ -257,6 +257,7 @@ body {
 }
 
 .focused-inbox-notif p,
+.edison-account-notif p,
 .whats-new-notif .text-container p {
   color: @text-color-very-subtle;
 }
